--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.1.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.3",
     "enzyme": "^3.11.0",
     "html-react-parser": "^3.0.1",
     "jest": "^26.6.0",
